# PX4-SITL_gazebo-classic

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  Dockerfile.validate_sdf  LICENSE.md  README.md  gazebo_motor_model.cpp  gazebo_motor_model.h  iris.sdf  model.config  package.xml  setup_gazebo.bash  test_unix_socket.py  xacro.py
.github/workflows/: build_test.yml  build_test_macos.yml  catkin_build_test.yml  firmware_build_test.yml  merge_upstream_changes.yml  px4-sitl-gazebo-artifacts.yml  ros_build_test.yml  tii-validate_sdf.yml  validate_sdf.yml
ancl_sls/: sitl_gazebo_run.sh
ancl_sls/iris_pendulum/: iris_pendulum.sdf  model.config
cmake/: 50_sitl_gazebo_setup.sh.in  EnableC++XX.cmake  FindGStreamer.cmake  FindMAVLink.cmake  catkin_setup.sh.in
include/: PID.h  RealSensePlugin.hh  ServoPlugin.hh  VideoPlugin.hh  common.h  flow.h  flow_settings.h  gazebo_acs_controller_plugin.h  gazebo_acs_controller_plugin.hh  gazebo_airflowsensor_plugin.h  gazebo_airship_dynamics_plugin.h  gazebo_airsim_plugin.h  gazebo_airspeed_plugin.h  gazebo_aruco_plugin.h  gazebo_barometer_plugin.h  gazebo_battery_plugin.h  gazebo_buoyancy_plugin.h  gazebo_camera_manager_plugin.h  gazebo_catapult_plugin.h  gazebo_cg_plugin.h  gazebo_coldgas_thruster_plugin.h  gazebo_collision_plugin.h  gazebo_contact_plugin.hh  gazebo_controller_interface.h  gazebo_custom_mavlink_interface.h  gazebo_drop_plugin.h  gazebo_geocoordinate_gps_plugin.h  gazebo_geotagged_images_plugin.h  gazebo_gimbal_controller_plugin.hh  gazebo_gps_origin_plugin.h  gazebo_gps_plugin.h  gazebo_groundtruth_plugin.h  gazebo_gst_camera_plugin.h  gazebo_hello_world_plugin.h  gazebo_hil_interface.h  gazebo_imu_plugin.h  gazebo_irlock_plugin.h  gazebo_lidar_plugin.h  gazebo_lta_aerodynamics_plugin.h  gazebo_lta_dynamics_plugin.h  (+39 more)
include/force_visual/: force_visual.h
include/liftdrag_plugin/: advanced_liftdrag_plugin.h  liftdrag_plugin.h  phi_aerodynamics_plugin.h
models/2d_spacecraft/: 2d_spacecraft.sdf  model.config
models/3DR_gps_mag/: 3DR_gps_mag.sdf.jinja  model.config
models/3d_spacecraft/: 3d_spacecraft.sdf  model.config
models/BB/: BB.sdf  model.config
models/CHS-Chair/: CHS-Chair.sdf  model.config
models/IF750A/: if750a.sdf  model.config
models/NDT_tilting/: NDT_tilting.sdf.jinja  model.config
models/advanced_plane/: advanced_plane.sdf.jinja  model.config
models/advanced_tailsitter/: advanced_tailsitter.sdf.jinja  model.config
models/airflowsensor/: airflowsensor.sdf  model.config
models/airspeed/: airspeed.sdf  model.config
models/aruco_cam/: aruco_cam.sdf  model.config
models/aruco_marker/: model.config  model.sdf
models/asphalt_plane/: model.sdf
models/baby_k/: baby_k.sdf.jinja  model.config
models/believer/: believer.sdf  model.config
models/bluerov2_heavy/: bluerov2_heavy.sdf  model.config
models/boat/: boat.sdf  boat.sdf.jinja  model.config
models/bumper_sensor/: bumper_sensor.sdf  model.config
models/c920/: c920.sdf.jinja  model.config
models/cansat/: cansat.sdf  model.config
msg/: CMakeLists.txt  vehicle_local_position.msg
msgs/: Airspeed.proto  ArucoMarker.proto  Barometer.proto  CMakeLists.txt  CollisionMapRequest.proto  CommandAttitudeThrust.proto  CommandMotorSpeed.proto  CommandRateThrust.proto  CommandRollPitchYawrateThrust.proto  CommandTrajectory.proto  CommandVelocityTrajectory.proto  Contacts.proto  Force.proto  Gps.proto  Groundtruth.proto  HilControl.proto  HilGps.proto  HilSensor.proto  IRLock.proto  Imu.proto  Int64.proto  Magnetometer.proto  NewXYStatus.proto  Odometry.proto  OpticalFlow.proto  Range.proto  ResetModel.proto  RollPitchSetpoint.proto  RollPitchStatus.proto  SITLGps.proto  Sniffer.proto  TargetRelative.proto  ThrusterStatus.proto  Wind.proto  WindSensor.proto  irlock.proto  lidar.proto  odom.proto  opticalFlow.proto  sonarSens.proto
msgs/ros/: IRLock.msg
resources/: px4_gazebo_jinja_parameters.json  sitl.json
scripts/: gen_params.json  jinja_gen.py  jinja_model_gen.py  jinja_world_gen.py  model.config.jinja  names.py  px4_timing.py  schema_download.bash  sitl.json  subscriber.py  substitution_args.py  validate_sdf.bash  xacro.py
src/: RealSensePlugin.cc  ServoPlugin.cc  VideoPlugin.cc  flow.c  flow_settings.c  gazebo_acs_controller_plugin.cpp  gazebo_airflowsensor_plugin.cpp  gazebo_airship_dynamics_plugin.cpp  gazebo_airsim_plugin.cpp  gazebo_airspeed_plugin.cpp  gazebo_aruco_plugin.cpp  gazebo_barometer_plugin.cpp  gazebo_battery_plugin.cpp  gazebo_buoyancy_plugin.cpp  gazebo_camera_manager_plugin.cpp  gazebo_catapult_plugin.cpp  gazebo_cg_plugin.cpp  gazebo_coldgas_thruster_plugin.cpp  gazebo_collision_plugin.cpp  gazebo_contact_plugin.cc  gazebo_controller_interface.cpp  gazebo_custom_mavlink_interface.cpp  gazebo_drop_plugin.cpp  gazebo_geocoordinate_gps_plugin.cpp  gazebo_geotagged_images_plugin.cpp  gazebo_gimbal_controller_plugin.cpp  gazebo_gps_origin_plugin.cpp  gazebo_gps_plugin.cpp  gazebo_groundtruth_plugin.cpp  gazebo_gst_camera_plugin.cpp  gazebo_hello_world_plugin.cpp  gazebo_hil_interface.cpp  gazebo_imu_plugin.cpp  gazebo_irlock_plugin.cpp  gazebo_lidar_plugin.cpp  gazebo_lta_aerodynamics_plugin.cpp  gazebo_lta_dynamics_plugin.cpp  gazebo_magnetometer_plugin.cpp  gazebo_mavlink_interface.cpp  gazebo_model_reset_plugin.cpp  (+35 more)
unit_tests/: CMakeLists.txt
worlds/: CANYON.world  SMALLGLACIER.world  TINY.world  airport.world  ba_demo.world  baylands.world  boat.world  cansat.world  cessna.world  cloudship.world  contact.world  delta_wing.world  empty.world  empty_ssrc.world  falcon.world  field.world  first_scene_world.world  frictionless.world  gen.world.jinja  gripper.world  hippocampus.world  hitl_iris.world  hitl_plane.world  hitl_standard_vtol.world  if750a.world  iris.world  iris_avoidance_benchmarking.world  iris_benchmarking.world  iris_fpv_cam.world  iris_irlock.world  iris_multiple_sitl.world  iris_obs_avoid.world  iris_opt_flow.world  iris_opt_flow_mockup.world  iris_ros.world  iris_rplidar.world  iris_vision.world  ksql_airport.world  leoc6.world  matrice_100.world  (+38 more)
(+641 files in other folders)
